--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "require": {
         "php": ">=5.4",
-        "symfony/dependency-injection": "~2.3"
+        "symfony/http-foundation": "~2.3",
+        "symfony/property-access": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
